# DDE-ITMO

./: .bash  .env  .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
etl/: __init__.py  extract.py  load.py  main.py  transform.py
notebooks/: EDA.ipynb
nutebooks/: ii.ipynb
