[project]
name = "coffee-data-analysis"
version = "0.1.0"
description = "ETL-проект для анализа данных о качестве кофе"
authors = [
    {name = "Data Engineer"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "jupyterlab (>=4.4.7,<5.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "seaborn (>=0.13.0,<1.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "pyarrow (>=17.0.0,<18.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
