[project]
name = "tech-defect-prediction"
version = "1.0.0"
description = "ETL-конвейер для обработки и анализа данных о дефектах в программном обеспечении"
authors = [
    {name = "Kuzmin Dmitry"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "matplotlib (>=3.7.0,<4.0.0)",
    "seaborn (>=0.12.0,<1.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "gdown (>=5.0.0,<6.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
    "jupyterlab (>=4.0.0,<5.0.0)",
    "ipykernel (>=6.0.0,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
